--- a/src/HealthCheck/Pages/_Host.cshtml
+++ b/src/HealthCheck/Pages/_Host.cshtml
@@ -44,6 +44,22 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Add chart.js reference if Chart components are used in the application. -->
     <script src="_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
+    <script>
+        window.downloadFileFromStream = async (fileName, content) => {
+            var enc = new TextEncoder();
+            const arrayBuffer = enc.encode(JSON.stringify(JSON.parse(content), (key, value) => {
+                if (value !== null) return value
+            }));
+            const blob = new Blob([arrayBuffer]);
+            const url = URL.createObjectURL(blob);
+            const anchorElement = document.createElement('a');
+            anchorElement.href = url;
+            anchorElement.download = fileName ?? '';
+            anchorElement.click();
+            anchorElement.remove();
+            URL.revokeObjectURL(url);
+        }
+    </script>
 </body>
 
 </html>
