--- a/src/HealthCheck/Shared/ResultDisplay.razor
+++ b/src/HealthCheck/Shared/ResultDisplay.razor
@@ -1,44 +1,54 @@
 ﻿@using HealthCheck.Data
 @using BlazorBootstrap
 
-<div>
-    @if (Result?.Status == Status.Processing)
-    {
-        <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-    }
-    else if (Result?.Status == Status.Success)
-    {
-        <Icon Name="IconName.Check" Color="IconColor.Success" />
-    }
-    else if (Result?.Status == Status.Warning)
-    {
-        <Icon Name="IconName.ExclamationTriangleFill" Color="IconColor.Warning" />
-    }
-    else if (Result?.Status == Status.Failure)
-    {
-        <Icon Name="IconName.XCircleFill" Color="IconColor.Danger" />
-    }
-    <span style="padding-left:8px;">@this.Result?.Name</span>
-</div>
 
-@if (!string.IsNullOrEmpty(Result?.HelpText) && Result.Status == Status.Warning)
+@if (Result?.Status == Status.Warning)
 {
-    <div class="help-text warn">
-        @this.Result.HelpText
-    </div>
+    <Alert Color="AlertColor.Warning">
+        <Icon Name="IconName.ExclamationTriangleFill" class="me-2"></Icon>
+        <span class="alert-header">@Result.Name</span>
+        @foreach (string Text in Result?.HelpText ?? new string[0])
+        {
+            <p>
+                @Text
+            </p>
+        }
+    </Alert>
 }
-@if (!string.IsNullOrEmpty(Result?.HelpText) && Result.Status == Status.Failure)
+else if (Result?.Status == Status.Failure)
 {
-    <div class="help-text error">
-        @this.Result.HelpText
-    </div>
+    <Alert Color="AlertColor.Danger">
+        <Icon Name="IconName.ExclamationTriangleFill" class="me-2"></Icon>
+        <span class="alert-header">@Result.Name</span>
+        @foreach (string Text in Result?.HelpText ?? new string[0])
+        {
+            <p>
+                @Text
+            </p>
+        }
+    </Alert>
+}
+else if (Result?.Status == Status.Success)
+{
+    <Alert Color="AlertColor.Success">
+        <Icon Name="IconName.CheckCircleFill" class="me-2"></Icon>
+        <span>@Result.Name</span>
+    </Alert>
+
+}
+else if (Result?.Status == Status.Processing)
+{
+    <Alert Color="AlertColor.Info">
+        <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+        <span>@Result.Name</span>
+    </Alert>
+
 }
 
 @code {
     [Parameter]
-    public HealthCheck.Data.Result Result { get; set; }
+    public HealthCheck.Data.Result? Result { get; set; }
 
     //public IconName IconString => Result.Status == "Processing" ? IconName.
 
 }
-
